--- a/Portfolio/Games/Games.html
+++ b/Portfolio/Games/Games.html
@@ -14,7 +14,7 @@
 
 <div id = "siteNavigation">
 <div id = "listParent">
-<li class = "NavList"><a class = "pageLink" href="../Home/HomePage.html">Home</a></li>
+<li class = "NavList"><a class = "pageLink" href="../Home/index.html">Home</a></li>
 <li class = "NavList"><a class = "currentPage" href="Games.html">Games</a></li>
 <li class = "NavList"><a class = "pageLink" href="../TwitchDesigns/TwitchDesigns.html">Twitch Designs</a></li>
 <li class = "NavList"><a class = "pageLink" href="../Contact/Contact.html">Contact & CV</a></li>
