Updated page indexing

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,6 +1,6 @@
-<link href="HomePageStyle.css" rel="stylesheet" type="text/css" />
+<link href="Home/HomePageStyle.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
-<script type="text/javascript" src="HomePageFunc.js"></script>
+<script type="text/javascript" src="Home/HomePageFunc.js"></script>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <html>
@@ -15,9 +15,9 @@
 <div id = "siteNavigation">
 <div id = "listParent">
 <li class = "NavList"><a class = "currentPage" href="index.html">Home</a></li>
-<li class = "NavList"><a class = "pageLink" href="../Games/Games.html">Games</a></li>
-<li class = "NavList"><a class = "pageLink" href="../TwitchDesigns/TwitchDesigns.html">Twitch Designs</a></li>
-<li class = "NavList"><a class = "pageLink" href="../Contact/Contact.html">Contact & CV</a></li>
+<li class = "NavList"><a class = "pageLink" href="Games/Games.html">Games</a></li>
+<li class = "NavList"><a class = "pageLink" href="TwitchDesigns/TwitchDesigns.html">Twitch Designs</a></li>
+<li class = "NavList"><a class = "pageLink" href="Contact/Contact.html">Contact & CV</a></li>
 </div>
 <div id = navigationBarSepeartion></div>
 </div>
@@ -30,7 +30,7 @@
 
 <div id = "slideShow">
 <div id = "gamePics">
-    <img id = "image" src="screenCap.png"/>  
+    <img id = "image" src="Home/screenCap.png"/>  
      <div id = "blackImage"></div>    
 </div>
 </div>
