--- a/Portfolio/Contact/Contact.html
+++ b/Portfolio/Contact/Contact.html
@@ -14,7 +14,7 @@
 
 <div id = "siteNavigation">
 <div id = "listParent">
-<li class = "NavList"><a class = "pageLink"  href="../Home/index.html">Home</a></li>
+<li class = "NavList"><a class = "pageLink"  href="../index.html">Home</a></li>
 <li class = "NavList"><a class = "pageLink" href="../Games/Games.html">Games</a></li>
 <li class = "NavList"><a class = "pageLink" href="../TwitchDesigns/TwitchDesigns.html">Twitch Designs</a></li>
 <li class = "NavList"><a class = "currentPage" href="Contact.html">Contact & CV</a></li>
