--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <div id = "slideShow">
 <div id = "gamePics">
-    <img id = "image" src="Home/CTF_Payload.PNG"/>  
+    <img id = "image" src="Home/screenCap.png">  
      <div id = "blackImage"></div>    
 </div>
 </div>
