CV can be downloaded

--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -25,7 +25,7 @@
 <div class = "gameEntry">
 <h1>CV</h1>
 <div class = "description">
-Download my CV <a href="CVUpdated2018" download>here</a>
+Download my CV <a href="CVUpdated2018.pdf" download>here</a>
 </div>
 <h1>Contact</h1>
 <div id = "logoPics">
