CV can be downloaded

--- a/TwitchDesigns/TwitchDesigns.html
+++ b/TwitchDesigns/TwitchDesigns.html
@@ -1,4 +1,5 @@
 <link href="TwitchStyle.css" rel="stylesheet" type="text/css" />
+<link rel="icon" href="../tabIcon.jpg">
 <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
 <script type="text/javascript" src="TwitchFunc.js"></script>
 
