--- a/Games/Games.html
+++ b/Games/Games.html
@@ -1,4 +1,5 @@
 <link href="GamesStyle.css" rel="stylesheet" type="text/css" />
+<link rel="icon" href="../tabIcon.jpg">
 <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
 <script type="text/javascript" src="GamesFunc.js"></script>
 
