--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <link href="Home/HomePageStyle.css" rel="stylesheet" type="text/css" />
-<link rel="icon" href="tabIcon.jpg">
+<link rel="icon" href="tabicon.ico">
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript" src="Home/HomePageFunc.js"></script>
 
