--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -1,5 +1,5 @@
 <link href="ContactStyle.css" rel="stylesheet" type="text/css" />
-<link rel="icon" href="../tabIcon.jpg">
+<link rel="icon" href="../tabicon.ico">
 <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
 <script type="text/javascript" src="ContactFunc.js"></script>
 
