--- a/TwitchDesigns/TwitchDesigns.html
+++ b/TwitchDesigns/TwitchDesigns.html
@@ -5,6 +5,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <html>
+<head>
+<title>Twitch Designs</title>
+</head>
 <div id = "content">
 <div id = "Background">
 <div id = "firstLine">
@@ -26,25 +29,23 @@
 <div class = "gameEntry">
 <h1> Overview</h1>
 <div class = "description">
-I create twitch designs and animation packages in a freelancing capacity, offering my services on <a href = "https://www.fiverr.com/tasty_lempons"> fiverr</a>.
+I create twitch designs and animation packages in a freelancing capacity, offering my services on <a href = "https://www.fiverr.com/ldgames"> fiverr</a>.
 </div>
 </div>
 
 <div class = "gameEntry">
 <h1> Overlay Packages</h1>
 <div class = "description">
-You can find my gig for this service <a href="https://www.fiverr.com/tasty_lempons/make-custom-twitch-buttons-offline-banner-for-your-stream">here</a>. I like to create many fantasy designs but also really love sci-fi style twitch designs. This package usually consists of twitch panel buttons, offline screen and a webcam design.
+You can find my gig here <a href="https://www.fiverr.com/ldgames/create-animated-twitch-alerts-integrated-into-webcam">here</a>. I like to create many fantasy designs but also really love sci-fi style twitch designs. This package usually consists of twitch panel buttons, offline screen and a webcam design.
 </div>
 <div id = "gamePics1080">
 <img id = "imageCollection" src="PackageComboGeneric.png"/> 
-<img id = "imageCollection" src="PackageComboSOT.png"/> 
-</div>
 </div>
 
 <div class = "gameEntry">
 <h1> Animated Alerts</h1>
 <div class = "description">
-You can find my gig for this service <a href="https://www.fiverr.com/tasty_lempons/create-animated-twitch-alerts-mixer-alerts">here</a>. To create these kind of custom alerts I use code to give extra control over the alert text. There are many advantage of using coded alerts, such as lots of control over the placement of the text, allowing me to animate the movement of the text. Text can also be scaled to ensure that it will always fit within the alert bounding box.
+You can find my gig for this service <a href="https://www.fiverr.com/ldgames/create-animated-coded-streaming-alerts-for-twitch-or-mixer">here</a>. To create these kind of custom alerts I use code to give extra control over the alert text. There are many advantage of using coded alerts, such as lots of control over the placement of the text, allowing me to animate the movement of the text. Text can also be scaled to ensure that it will always fit within the alert bounding box.
 <div class = "videoContainer">
 <iframe class="video" src="https://www.youtube.com/embed/cjB0wAMpWhI"  height="315" width="560"></iframe>
 </div>
