--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -5,6 +5,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <html>
+<head>
+<title>Contact</title>
+</head>
 <div id = "content">
 <div id = "Background">
 <div id = "firstLine">
