--- a/Games/Games.html
+++ b/Games/Games.html
@@ -5,6 +5,9 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <html>
+<head>
+<title>Games</title>
+</head>
 <div id = "content">
 <div id = "Background">
 <div id = "firstLine">
@@ -46,6 +49,18 @@ I was the lead programmer of this project and managed two other programmers. I w
 </div>
 </div>
 
+<div class = "gameEntry">
+<h1> Breaking Ground</h1>
+<div class = "description">Immerse yourself in your own world and see your town come to life! Build your own city, see it grow and be rewarded. Golden Bricks and fortune awaits! Help the townsfolk by constructing factories, producing much-needed products and deliver them with your fleet of trucks. Follow the story-line to make your city a fantastic place to live. Play the amazing in-game activities, such as swinging through the forest, mixing new chemicals in the lab and navigating perilous mine tunnels while prospecting for golden bricks in the mine. Build houses and turn them into a home, decorate homes as you like! Be rewarded with XP and unlock new levels, products and trucks! You can download the game on <a href ="https://play.google.com/store/apps/details?id=com.gamethefuture.Plant">Play Store</a>.
+
+<div class = "videoContainer">
+<iframe class="video" src="https://www.youtube.com/embed/jiC97bq9ezw" height="315" width="560"></iframe>
+</div>
+
+</div>
+</div>
+
+<div class = "gameEntry">
 <div class = "gameEntry">
 <h1> BlockTale</h1>
 <div class = "description">This is a game built for both Android and iOS, this was a game that I created with a one month deadline. Available on <a href = "https://itunes.apple.com/us/app/blocktale/id1161419734?ls=1&mt=8">App Store</a> and <a href ="http://bit.ly/2d6vtyr">Play Store</a>. The aim of this game is to build a tower as tall as you possibly can without losing your lives. Players can strategically glue blocks together to make the structure more stable.
